[gd_scene load_steps=4 format=3 uid="uid://huq286xe05w7"]

[ext_resource type="Texture2D" uid="uid://wmekdouxl3p6" path="res://assets/art/player_sprite.png" id="1_4flbx"]
[ext_resource type="Script" uid="uid://djjlp6e3a5op" path="res://scenes/player.gd" id="1_onrkg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(8, 8)

[node name="Player" type="Area2D"]
collision_mask = 0
script = ExtResource("1_onrkg")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
texture = ExtResource("1_4flbx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_onrkg")

[node name="Raycasts" type="Node2D" parent="."]

[node name="RaycastUp" type="RayCast2D" parent="Raycasts"]
unique_name_in_owner = true
position = Vector2(0, -8)
target_position = Vector2(0, -8)
hit_from_inside = true

[node name="RaycastDown" type="RayCast2D" parent="Raycasts"]
unique_name_in_owner = true
position = Vector2(0, 8)
target_position = Vector2(0, 8)
hit_from_inside = true

[node name="RaycastLeft" type="RayCast2D" parent="Raycasts"]
unique_name_in_owner = true
position = Vector2(-8, 0)
target_position = Vector2(-8, 0)
hit_from_inside = true

[node name="RaycastRight" type="RayCast2D" parent="Raycasts"]
unique_name_in_owner = true
position = Vector2(8, 0)
target_position = Vector2(8, 0)
hit_from_inside = true
